--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -16,7 +16,7 @@ jobs:
           cache-dependency-path: '**/requirements-dev.txt'
       - name: Install dependencies
         run: |
-          python -m pip install -r requirements-dev.txt
+          python -m pip install -r ./pyspark/requirements-dev.txt
       - name: Analysing the code with pytest
         run: |
           python3 -m pytest
